--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    <script src="https://raw.githubusercontent.com/MichaellaCKS/FIT3179Assignment2/main/js/vega.js"></script>
+    <script src="js/vega.js"></script>
 </head>
 <!-- CSS file -->
-<link rel="stylesheet" type="text/css" href="css/style.css" media="all">
+<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 <style>
     /* Add custom CSS styles for aesthetics */
     
@@ -57,13 +57,13 @@
 
 <body>
     <header>
-        <h1>World Happiness Report</h1>
+        <h1>Billionaires around the World</h1>
         <p>Exploring Global Happiness and Economic Well-being</p>
     </header>
 
     <div class="container">
         <h2>Visualizations</h2>
-        <p>Here are two visualisations that depict key insights from the World Happiness Report:</p>
+        <p>Loren ipsum</p>
         <div id="choropeth"></div>
         <div id="line"></div>
 
@@ -82,7 +82,6 @@
         <h2>Explore Further</h2>
         <p>To explore the complete report and gain more insights, you can visit the official World Happiness Report website.</p>
         <a href="https://worldhappiness.report/" target="_blank">Official World Happiness Report</a>
-
 
     </div>
 
