--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <h2>Gender distribution in the top 5 countries</h2>
                 <p>This graph explores in more detail the differences between countries and genders. As seen before, <span class="countries">USA </span> and <span class="countries"> China</span> are well in front of the other countries.
                 </p>
-                <p>Each 🟦 or 🟧 represents 10 billionaires.</p>
+                <p>Each 🟦 represents 10 male billionaires.</p>
+                <p>Each 🟧 represents 10 female billionaires.</p>
             </div>
             <div id=symbol></div>
 
