--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- pure grid group -->
         <div class="header">
             <h1>Visualising the world's billionaires</h1>
-            <p style="color: white;">This visualisation delves into the break-down of the world's top 1%.</p>
+            <p style="color: white;">This visualisation delves into the break-down of the world's top 1% in 2023.</p>
         </div>
         <!-- end pure grid group -->
         <div class="container-normal">
@@ -40,6 +40,58 @@
             <div id=choropeth></div>
 
         </div>
+
+        <div class="container-normal">
+            <div class="description description-right">
+                <h2>Who are they?</h2>
+                <p>Altogether, the planet’s billionaires are now worth $12.2 trillion, a drop of $500 billion from $12.7 trillion in March 2022.</p>
+            </div>
+            <div class="container-images">
+                <div class="pure-u-1-2">
+                    <div class="pure-g">
+                        <div class="pure-u-1-3">
+                            <img src="css/Bernard_Arnault.jpg">
+                        </div>
+                        <div class="pure-u-2-3">
+                            <p class="bios">Bernard Arnault is the richest man in the world. He oversees the LVMH empire of 75 fashion and cosmetics brands, including Louis Vuitton and Sephora. He earns over $ 300,000 a day.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="pure-g">
+                        <div class="pure-u-1-3">
+                            <img src="css/Elon_Musk.jpg">
+                        </div>
+                        <div class="pure-u-2-3">
+                            <p class='bios'>Elon Musk dropped from first place from 2022. He cofounded six companies, including electric car maker Tesla, rocket producer SpaceX and tunneling startup Boring Company.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="pure-u-1-2">
+                    <div class="pure-g">
+                        <div class="pure-u-1-3">
+                            <img src="css/Mukesh_Ambani.jpg">
+                        </div>
+                        <div class="pure-u-1-2">
+                            <p class='bios'>Mukesh Ambani chairs and runs $110 billion (revenue) Reliance Industries, which has interests in petrochemicals, oil and gas, telecom and retail. He is the only Asian in the top 10.</p>
+                        </div>
+                    </div>
+
+                    <div class="pure-g">
+                        <div class="pure-u-1-3">
+                            <img src="css/francoise.png">
+                        </div>
+                        <div class="pure-u-2-3">
+                            <p class='bios'>
+                                Francoise Bettencourt Meyers, the granddaughter of the founder of L'Oreal, is the richest woman in the world. She inherited her fortune from the grandparents and parents.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <!-- pure grid group -->
         <div class="container">
